Fix PATHs for libcuda.so on runtime.
ref:
- https://github.com/NVIDIA/nvidia-docker/issues/508#issuecomment-340117499
- https://github.com/tensorflow/tensorflow/pull/13399#issuecomment-333666738

--- a/9.0/devel-cv/Dockerfile
+++ b/9.0/devel-cv/Dockerfile
@@ -54,12 +54,10 @@ RUN : 'OpenCV: Install numpy before build' \
   && : 'Clean up' \
   && rm -rf /opencv.tar.gz /opencv /opencv_contrib.tar.gz /opencv_contrib /openmpi.tar.gz /openmpi
 
-ENV LD_LIBRARY_PATH=/usr/local/lib:/usr/lib64:$LD_LIBRARY_PATH
-ENV CPATH=/usr/local/include:$CPATH
 ENV CUDA_PATH=/usr/local/cuda
 ENV PATH=$CUDA_PATH/bin:$PATH
-ENV CPATH=$CUDA_PATH/include:$CPATH
-ENV LD_LIBRARY_PATH=$CUDA_PATH/lib64:$CUDA_PATH/lib:$LD_LIBRARY_PATH
+ENV CPATH=$CUDA_PATH/include:/usr/local/include:$CPATH
+ENV LD_LIBRARY_PATH=$CUDA_PATH/lib64:$CUDA_PATH/lib64/stubs:/usr/local/lib:$LD_LIBRARY_PATH
 
 RUN : 'Install Chainer' \
   && pip3 install cupy==${DOCKERBUILD_CUPY_VERSION} chainer==${DOCKERBUILD_CHAINER_VERSION} chainermn
